attached_assets/Pasted--Users-marselmacevans-Downloads-atmrs-Source-PluginProcessor-cpp-335-40-warning-implicit-conversio-1755678848489_1755678848490.txt
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:335:40: warning: implicit conversion changes signedness: 'const int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  335 |             std::vector<float> pitches(numSamples);
      |                                ~~~~~~~ ^~~~~~~~~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:341:46: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  341 |                 float currentPitch = pitches[sample];
      |                                      ~~~~~~~ ^~~~~~
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:2:
/Users/marselmacevans/Downloads/atmrs/Source/Utils.h:31:60: error: unknown type name 'WindowType'
   31 |     static void applyWindow(float* buffer, int numSamples, WindowType windowType);
      |                                                            ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:183:69: warning: implicit conversion turns floating-point number into integer: 'float' to 'int' [-Wfloat-conversion]
  183 |     auto mainControlsArea = bounds.removeFromTop(bounds.getHeight() * 0.6f);
      |                                    ~~~~~~~~~~~~~ ~~~~~~~~~~~~~~~~~~~^~~~~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:234:63: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  234 |             float y = displayArea.getBottom() - (pitchHistory[i] * 0.5f + 0.5f) * displayArea.getHeight();
      |                                                  ~~~~~~~~~~~~ ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:231:27: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  231 |         for (int i = 0; i < pitchHistory.size(); ++i)
      |                         ~ ^ ~~~~~~~~~~~~~~~~~~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:261:27: error: 'this' argument to member function 'removeFromLeft' has type 'const juce::Rectangle<int>', but function is not marked const
  261 |     auto inputMeterArea = area.removeFromLeft(meterWidth);
      |                           ^~~~
/Users/marselmacevans/Downloads/atmrs/build/_deps/juce-src/modules/juce_graphics/geometry/juce_Rectangle.h:526:15: note: 'removeFromLeft' declared here
  526 |     Rectangle removeFromLeft (ValueType amountToRemove) noexcept
      |               ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:262:28: error: 'this' argument to member function 'removeFromRight' has type 'const juce::Rectangle<int>', but function is not marked const
  262 |     auto outputMeterArea = area.removeFromRight(meterWidth);
      |                            ^~~~
/Users/marselmacevans/Downloads/atmrs/build/_deps/juce-src/modules/juce_graphics/geometry/juce_Rectangle.h:542:15: note: 'removeFromRight' declared here
  542 |     Rectangle removeFromRight (ValueType amountToRemove) noexcept
      |               ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:355:22: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  355 |         pitchHistory[i] = pitchHistory[i + 1];
      |         ~~~~~~~~~~~~ ^
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:355:42: warning: implicit conversion changes signedness: 'int' to 'size_type' (aka 'unsigned long') [-Wsign-conversion]
  355 |         pitchHistory[i] = pitchHistory[i + 1];
      |                           ~~~~~~~~~~~~ ~~^~~
/Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:353:23: warning: comparison of integers of different signs: 'int' and 'size_type' (aka 'unsigned long') [-Wsign-compare]
  353 |     for (int i = 0; i < pitchHistory.size() - 1; ++i)
      |                     ~ ^ ~~~~~~~~~~~~~~~~~~~~~~~
74 warnings and 1 error generated.
make[2]: *** [CMakeFiles/AutoTunePlugin.dir/Source/PitchCorrectionEngine.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.cpp:1:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/AIModelLoader.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:27:
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_float16.h:301:24: warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  301 |   o.u = (val & 0x7fff) << 13;            // exponent/mantissa bits
      |       ~ ~~~~~~~~~~~~~~~^~~~~
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:198:49: note: in instantiation of member function 'onnxruntime_float16::Float16Impl<Ort::Float16_t>::ToFloatImpl' requested here
  198 |   float ToFloat() const noexcept { return Base::ToFloatImpl(); }
      |                                                 ^
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.cpp:1:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginEditor.h:6:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/PluginProcessor.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/Source/AIModelLoader.h:11:
In file included from /Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:27:
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_float16.h:301:24: warning: implicit conversion changes signedness: 'int' to 'unsigned int' [-Wsign-conversion]
  301 |   o.u = (val & 0x7fff) << 13;            // exponent/mantissa bits
      |       ~ ~~~~~~~~~~~~~~~^~~~~
/Users/marselmacevans/Downloads/atmrs/build/_deps/onnxruntime-src/include/onnxruntime_cxx_api.h:198:49: note: in instantiation of member function 'onnxruntime_float16::Float16Impl<Ort::Float16_t>::ToFloatImpl' requested here
  198 |   float ToFloat() const noexcept { return Base::ToFloatImpl(); }
      |                                                 ^
78 warnings and 3 errors generated.
82 warnings and 4 errors generated.
make[2]: *** [CMakeFiles/AutoTunePlugin.dir/Source/PluginEditor.cpp.o] Error 1
make[2]: *** [CMakeFiles/AutoTunePlugin.dir/Source/PluginProcessor.cpp.o] Error 1
make[1]: *** [CMakeFiles/AutoTunePlugin.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 25%] Linking CXX executable juce_vst3_helper
[ 25%] Built target juce_vst3_helper
make: *** [all] Error 2
❌ Build failed!
marselmacevans@iMac-Marsel atmrs % 